# NeoDB

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
include/server/: server_def.h
include/server/common/: common_def.h  file_handler.h  neodb_log.h
include/server/execution/: place_holder.h
include/server/parse/: parse_def.h
include/server/resolve/: place_holder.h
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client_main.cpp
src/server/: CMakeLists.txt  global.h  global.h.in  server_config.json  server_def.cpp  server_def.h  server_main.cpp
src/server/common/: CMakeLists.txt  common_def.cpp  common_def.h  file_handler.cpp  file_handler.h  message.cpp  message.h  neodb_log.cpp  neodb_log.h  toolkit.cpp  toolkit.h
src/server/execution/: CMakeLists.txt  place_holder.cpp
src/server/parse/: CMakeLists.txt  parse_def.cpp
src/server/resolve/: CMakeLists.txt  place_holder.cpp
